--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -1,1 +1,5 @@
 \chapter{Continuous Program Optimization Techniques}
+
+\section{Implementing On-Stack Replacement in LLVM}
+
+\section{On-Stack Replacement in the Presence of Optimizations}
