--- a/experiments.tex
+++ b/experiments.tex
@@ -2,6 +2,6 @@
 
 \section{HCCT Construction and Accuracy}
 
-\section{k-iteration Path Profiling}
+\section{{\em k-}iteration Path Profiling}
 
 \section{On-Stack Replacement}
