--- a/introduction.tex
+++ b/introduction.tex
@@ -1,5 +1,11 @@
 \chapter{Introduction}
 
+Translating programming languages into a form that can {\em efficiently} execute on a target platform is one of the most challenging problems in computer science. Historically, there are two approaches to translation: interpretation and compilation. An interpreter reads the source code of a program, stepping through its expressions to determine which operation is to perform next. A compiler translates a program into a form that is more amenable to execution, analyzing the source code once and generating code that would give the same effects as interpreting the program.
+
+These two approaches show different advantages in terms of execution speed, code footprint, portability, and access to run-time information.
+%As programming languages have been evolving over the years,
+%Modern interpreters translate source code into an intermediate representation that is easier to work with, and can optionally perform optimizations based on the current workload.
+
 \section{Context and Motivations}
 
 \section{Addressed Problems}
