--- a/state-of-art.tex
+++ b/state-of-art.tex
@@ -2,6 +2,14 @@
 
 \section{Performance Profiling}
 
+\subsection{Intra-Procedural Techniques}
+
+\subsection{Inter-Procedural Techniques}
+
 \section{Profile-Driven Optimization}
+
+\subsection{Profile-Directed Feedback}
+
+\subsection{Just-In-Time Compilation}
 
 \section{On-Stack Replacement}
