--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -2,4 +2,4 @@
 
 \section{Implementing On-Stack Replacement in LLVM}
 
-\section{On-Stack Replacement in the Presence of Optimizations}
+\section{On-Stack Replacement in the Presence of Compiler Optimizations}
