--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
   urlcolor = blue, %  colour for external hyperlinks
   linkcolor = black, % colour of internal links
   citecolor = red % colour of citations
-  pdftitle = {New Techniques for Dynamic Program Optimization},
+  pdftitle = {New Techniques for Adaptive Optimization},
   pdfauthor= {Daniele Cono D'Elia}
 }
 
