--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[PhD,binding=0cm,noexaminfo]{sapthesis}
+\documentclass[PhD,binding=0cm,noexaminfo,oneside]{sapthesis}
 \usepackage{microtype} % http://www.khirevich.com/latex/microtype/
 
 \usepackage[utf8]{inputenx}
