--- a/case-studies.tex
+++ b/case-studies.tex
@@ -2,4 +2,4 @@
 
 \section{Masked Convolution Filters in Image Processing}
 
-\section{Optimizing Higher-Order Functions in Matlab}
+\section{Optimizing Higher-Order Functions in MATLAB}
