--- a/state-of-art.tex
+++ b/state-of-art.tex
@@ -2,14 +2,22 @@
 
 \section{Performance Profiling}
 
-\subsection{Intra-Procedural Techniques}
+\subsection{Means for Collecting Profiling Information}
 
-\subsection{Inter-Procedural Techniques}
+\subsection{Intra-Procedural Profiling Techniques}
 
-\section{Profile-Driven Optimization}
+\subsection{Inter-Procedural Profiling Techniques}
 
-\subsection{Profile-Directed Feedback}
+\section{Optimized Code Generation}
+
+\subsection{Profile-Guided Optimization}
 
 \subsection{Just-In-Time Compilation}
 
-\section{On-Stack Replacement}
+\subsubsection{On-Stack Replacement}
+
+\subsubsection{Tracing JIT Compilation}
+
+\subsection{Other Related Work}
+
+% Dynamic Binary Optimization, Self-Optimizing AST
