--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,8 @@
 \documentclass[PhD,binding=0cm,noexaminfo,oneside]{sapthesis}
 \usepackage{microtype} % http://www.khirevich.com/latex/microtype/
-
 \usepackage[utf8]{inputenx}
-
 \usepackage{hyperref}
+
 \hypersetup{
   colorlinks = true, % colours links instead of ugly boxes
   urlcolor = blue, %  colour for external hyperlinks
@@ -11,7 +10,10 @@
   citecolor = red % colour of citations
   pdftitle = {New Techniques for Adaptive Optimization},
   pdfauthor= {Daniele Cono D'Elia}
-}
+}	
+
+\setcounter{tocdepth}{4}
+\setcounter{secnumdepth}{4}
 
 \title{\input{title}}
 \author{Daniele Cono D'Elia}
