--- a/introduction.tex
+++ b/introduction.tex
@@ -30,8 +30,11 @@ Analyzing the run-time behavior of a program is useful also in the context of st
 
 Collecting accurate profiling information with a minimal impact on a running program is a key factor for an effective deployment of adaptive optimization techniques. In principle, developers and VM builders may leverage hardware performance counters provided by modern processors to collect low-level profiling information with no impact on a running program. However, the difficulty in mapping low-level counter data to high-level constructs such as classes and objects discourages their use for implementing complex analyses in runtime systems.
 
-In this thesis, we devise two {\em dynamic} (i.e., run-time) analyses for collecting fine-grained profiling information based on efficient and elegant algorithmic techniques. The first analysis works at {\em intra-procedural} level and identifies cyclic paths that are taken in the control-flow graph of a single procedure, thus spanning multiple loop iterations.
-The second analysis is {\em inter-procedural} as it focuses on identifying the calling contexts of function invocations that are most frequently encountered during the execution of a real-world application, where a {\em calling context} is defined as the sequence of functions concurrently active on the stack when a function call is performed. Both techniques can provide valuable information for program understanding and performance analysis, as they can be used to direct optimizations to portions of the code where most resources are consumed.
+In this thesis, we devise two {\em dynamic} (i.e., run-time) analyses for collecting fine-grained profiling information based on efficient and elegant algorithmic techniques. The first analysis works at {\em intra-procedural} level and identifies cyclic paths that are taken in the control-flow graph of a single procedure, thus spanning multiple loop iterations. The second analysis is {\em inter-procedural} as it focuses on identifying the calling contexts of function invocations that are most frequently encountered during the execution of a real-world application, where a {\em calling context} is defined as the sequence of functions concurrently active on the stack when a function call is performed. Both techniques can provide valuable information for program understanding and performance analysis, as they can be used to direct optimizations to portions of the code where most resources are consumed.
+
+Another key ingredient for adaptive optimization is the ability of a runtime to divert the execution to newly generated code {\em while} the original function is executing. In fact, in the presence of long-running methods it is not sustainable for a VM to wait for the original function to complete and let only subsequent invocations of it run the new version. This problem is formally known as {\em on-stack replacement} (OSR); production virtual machines implement OSR to dynamically replace code with (more) optimized code, and also to invalidate aggressive optimizations and continue into a safe code version when a speculative assumption no longer holds.
+
+%This raises a fundamental question: how to divert the execution into optimized code?
 
 \section{Contributions of the Thesis}
 
