--- a/introduction.tex
+++ b/introduction.tex
@@ -32,9 +32,7 @@ Supporting OSR in a runtime system raises a number of fundamental questions. Wha
 
 \section{Contributions of the Thesis}
 
-The first contribution of this thesis is an {\em interprocedural} technique for identifying the most frequently encountered calling contexts\footnote{A {\em calling context} for a function call is defined as the sequence of functions that are concurrently active on the stack when the call is performed.} across function invocations. We show that the traditional approach for constructing the {\em Calling Context Tree} (CCT) might  not be sustainable for real-world applications, as their CCTs might easily consist of tens of millions of node, making them difficult to analyze and also hurting execution time because of poor access locality. We introduce a novel data structure, the {\em Hot Calling Context Tree} (HCCT), in the spectrum of representations for interprocedural control flow. The HCCT includes only most frequently visited CCT nodes and their ancestors, and can be constructed independently from the CCT using fast, space-efficient algorithms for mining frequent items in data stream.
-
-%For performance analysis, accurately mining only hot calling contexts may be more useful than constructing an entire CCT with millions of uninteresting paths, because the distribution of context frequencies is typically very skewed. In this article, we show how to exploit this property to considerably reduce the CCT size, introducing a novel runtime data structure, called hot CCT (HCCT), in the spectrum of representations for interprocedural control flow. The HCCT includes only hot nodes and their ancestors in a CCT and can be constructed independently from it by using fast, space-efficient algorithms for mining frequent items in data streams. With this approach, we can distinguish between hot and cold contexts on the fly while obtaining very accurate frequency counts. We show, both theoretically and experimentally, that the HCCT achieves a similar precision as the CCT in a space that is several orders of magnitude smaller and roughly proportional to the number of hot contexts. Our approach can be effectively combined with previous context-sensitive profiling techniques, as we show for static bursting. We devise an implementation as a plug-in for the gcc compiler that incurs a slowdown competitive with the gprof call-graph profiler while collecting finer-grained profiles.
+The first contribution of this thesis is an {\em interprocedural} technique for identifying the most frequently encountered calling contexts\footnote{A {\em calling context} for a function call is defined as the sequence of functions that are concurrently active on the stack when the call is performed.} across function invocations. We show that the traditional approach for constructing the {\em Calling Context Tree} (CCT) might  not be sustainable for real-world applications, as their CCTs might easily consist of tens of millions of node, making them difficult to analyze and also hurting execution time because of poor access locality. We introduce a novel data structure, the {\em Hot Calling Context Tree} (HCCT), in the spectrum of representations for interprocedural control flow. The HCCT is the subtree of the CCT containing only its most visited nodes, which we call {\em hot}, along with their ancestors, and can be constructed independently from the CCT using fast, space-efficient algorithms for mining frequent items in data stream. These algorithms allow us to distinguish between hot and cold context on-the-fly, and we show both theoretically and experimentally that for collected metrics the HCCT achieves a similar precision as the CCT in a space that is several orders of magnitude smaller. We show on prominent benchmarks that our implementation, which ships as a plugin for the gcc compiler, incurs a slowdown competitive with the gprof call-graph profiler while collecting finer-grained profiles.
 
 %In this thesis, we devise two {\em dynamic} (i.e., run-time) analyses for collecting fine-grained profiling information based on efficient and elegant algorithmic techniques. The first analysis works at {\em intra-procedural} level and identifies cyclic paths that are taken in the control-flow graph of a single procedure, thus spanning multiple loop iterations. The second analysis is {\em inter-procedural} as it focuses on identifying the calling contexts of function invocations that are most frequently encountered during the execution of a real-world application, where a {\em calling context} is defined as the sequence of functions concurrently active on the stack when a function call is performed. Both techniques can provide valuable information for program understanding and performance analysis, as they can be used to direct optimizations to portions of the code where most resources are consumed.
 
