--- a/header.tex
+++ b/header.tex
@@ -50,3 +50,7 @@
 
 \newenvironment{myproofsketch}
 {\noindent{\sc Proof} (Sketch).}{\hspace*{\fill}$\Box$\par\vspace{2mm}}
+
+% macros
+\newcommand{\gcc}{{\tt gcc}}
+\newcommand{\gprof}{{\tt gprof}}
